Fix Chrome mobile pre overflow issue

--- a/themes/test/assets/css/components/_code.css
+++ b/themes/test/assets/css/components/_code.css
@@ -13,6 +13,7 @@
 
 .highlight * {
   color: var(--app-colour-background);
+  font-size: 1rem;
 }
 
 code:not([class^="language"]) {
@@ -25,8 +26,9 @@ code:not([class^="language"]) {
 @media only screen and (max-width: 66rem) {
   .highlight {
     margin: 1rem 0;
-    width: 100%;
+    max-width: 100%;
     padding: 0;
+    overflow: scroll;
   }
 
   .highlight pre {
